Fixed scrollbar causing page to shift

--- a/src/app.css
+++ b/src/app.css
@@ -34,6 +34,10 @@
 	}
 }
 
+html {
+	scrollbar-gutter: stable both-edges;
+}
+
 body {
 	color: var(--foreground);
 	background: var(--background);
@@ -41,4 +45,6 @@ body {
 	background-image: linear-gradient(rgba(255, 255, 255, 0.05) 1px, transparent 1px),
 		linear-gradient(90deg, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
 	background-size: 20px 20px;
+	min-height: 100%;
+	overflow-anchor: none;
 }
